// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Requests renders an InputFile 1`] = `
<div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload File
          </span>
        </button>
        <p
          class="base regular small text"
        >
          Select or drag a file here to upload
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Post Requests renders an InputFile with multiple images allowed 1`] = `
<div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      accept="image/*"
      autocomplete="off"
      data-testid="input-file-input"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload Images
          </span>
        </button>
        <p
          class="base regular small text"
        >
          Select or drag images here to upload
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Post Requests renders an InputFile with multiple uploads 1`] = `
<div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload Files
          </span>
        </button>
        <p
          class="base regular small text"
        >
          Select or drag files here to upload
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Post Requests renders an InputFile with only images allowed 1`] = `
<div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      accept="image/*"
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload Image
          </span>
        </button>
        <p
          class="base regular small text"
        >
          Select or drag an image here to upload
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Post Requests renders an InputFile with proper variations 1`] = `
<div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload File
          </span>
        </button>
        <p
          class="base regular small text"
        >
          Select or drag a file here to upload
        </p>
      </div>
    </div>
  </div>
  <div
    class="dropZoneBase dropZone"
    role="button"
    tabindex="0"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <div
      class="dropzoneContent"
    >
      <div
        class="padded small"
      >
        <button
          aria-label="Upload file"
          class="button small work secondary"
          type="button"
        >
          <span
            class="base semiBold base base"
          >
            Upload File
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="dropZoneBase"
    role="button"
    tabindex="-1"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <button
      aria-label="Upload file"
      class="button base work secondary fullWidth"
      type="button"
    >
      <span
        class="base semiBold base base"
      >
        Upload File
      </span>
    </button>
  </div>
  <div
    class="dropZoneBase"
    role="button"
    tabindex="-1"
  >
    <input
      autocomplete="off"
      data-testid="input-file-input"
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    <button
      aria-label="Upload file"
      class="button small work secondary fullWidth"
      type="button"
    >
      <span
        class="base semiBold base base"
      >
        Upload File
      </span>
    </button>
  </div>
</div>
`;
